# sSMTP

./: .gitignore  COPYRIGHT  ChangeLog  Makefile.am  Makefile.in  README  TODO  configure  configure.ac  ssmtp.8  ssmtp.c  ssmtp.conf  ssmtp.conf.5
debian/po/: uk.po
